your commit changes

--- a/inde.html
+++ b/inde.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is the first thing</title>
+    <title>This is the first thing and this is my secound thing to do this manner</title>
 </head>
 <body>
     
