this is the secoinf

--- a/inde.html
+++ b/inde.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is the first thing and this is my secound thing to do this manner</title>
-</head>this is the third thing i am adding in this repo
-<body>
-    
+    <body>
+        this the first conflict i have taken so far and this the first thing i ahve to push to the fewer thing to do so far
+    </body>
