this is the secound time pushing thig

--- a/inde.html
+++ b/inde.html
@@ -3,4 +3,5 @@
     <body>
         this the first conflict i have taken so far and this the first thing i ahve to push to the fewer thing to do so far and while doing everythinf there is lotds of the conflictds taking place so far
         
-    </body>
+    </body>this is the secound time alla 6th time change madtiradu gotta??
+    
