--- a/inde.html
+++ b/inde.html
@@ -2,4 +2,4 @@
 <html lang="en">
     <body>
         this the first conflict i have taken so far and this the first thing i ahve to push to the fewer thing to do so far and while doing everythinf there is lotds of the conflictds taking place so 
-hi this is my secound project to be done so far in the kind of the thing
+hi this is my secound project to be done so far in the kin
