--- a/inde.html
+++ b/inde.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <body>
-        this the first conflict i have taken so far and this the first thing i ahve to push to the fewer thing to do so far and while doing everythinf there is lotds of the conflictds taking place so 
-hi this is my s
+  <body>
+    this the first conflict i have taken so far and this the first thing i ahve
+    to push to the fewer thing to do so far and while doing everythinf there is
+    lotds of the conflictds taking place so hi this is my s
+  </body>
+</html>
