--- a/inde.html
+++ b/inde.html
@@ -6,3 +6,4 @@
     lotds of the conflictds taking place so hi this is my s
   </body>
 </html>
+<title>thsis is an almighty rajukind of thing</title>
