--- a/hero-section.html
+++ b/hero-section.html
@@ -1,4 +1,4 @@
 <section>
     <section></section><section></section>
     
-</section>hi my nam ei srash,mi b an di am a cloud architect and a backend developer thats it git...
+</section>hi my nam ei srash,mi b an di am a cloud architect and a backend developer thats it git......
