--- a/about.html
+++ b/about.html
@@ -11,5 +11,7 @@
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <h1 style="text-align: center">welcome to chaicode - about page</h1>
+  </body>
 </html>
