--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 >>>>>>>><<<<<<<<<<<
 <!DOCTYPE html>
 <html lang="en">
-  <head>kogu
+  <head>kogu>>>>>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WELCOME TO THE CUSTOM SERVER</title>
