--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <head>kogu>>>>>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WELCOME TO THE CUSTOM SERVER</title>
+    <title>WELCOME TO THE CUSTOM SERVER</title>>>>
     <style>
       body {
         background-color: #1a1a1a;
