--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>WELCOME TO THE CUSTOM SERVER</title>>>>
     <style>
       body {
-        background-color: #1a1a1a;
+        background-color: #1a1a1a;>>>>>>
         color: #fff;
       }
     </style>
