--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         background-color: #1a1a1a;>>>>>>
         color: #fff;
       }}}
-    </style>
+    </style>>>>
   </head>
   <body>
     <h1 style="text-align: center">welcome to chaicode - contact page</h1>
