--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <style>
       body {
         background-color: #1a1a1a;>>>>>>
-        color: #fff;
+        color: #fff;>>>>
       }}}
     </style>>>>
   </head>
